# khook

./: CMakeLists.txt  README.md  dl.c  khook.c
arch/arm/: CMakeLists.txt  arch.c  arch_p.h  asm.S  dl.c  dl_helper.c  mmu.c  mmu.h
include/: khook.h  khook_arch.h  khook_debug.h  khook_list.h
include/grub/: dl.h  err.h  misc.h  types.h
modules/: test.c
tests/: test.c
